@@ -1,3 +1,7 @@
+03-Dec-2012 - AnS - Taseditor: fixed accelerators when editing Notes
+03-Dec-2012 - AnS - fixed "X" button in the "Enter New Input" dialog (Hotkey Mapping); changed "Cancel" button to "OK"
+03-Dec-2012 - CaH4e3 - fixed mapper 99
+30-Nov-2012 - CaH4e3 - more mappers to boards conversion
 29-Nov-2012 - zeromus - fix "you ling xing dong" by assigning to mapper 192
 
 ---r2768 - FCEUX 2.2.0 Released---
